<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/ProfileTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_text"
        android:background="@color/dark_green"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/UserNameEditText"
        android:layout_width="@dimen/long_edittext_width"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginTop="@dimen/login_edittext_distance"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/ProfileTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"
        />

    <EditText
        android:id="@+id/PhoneNumberEditText"
        android:layout_width="@dimen/long_edittext_width"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginTop="@dimen/login_edittext_distance"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/UserNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4"
        />

    <Button
        android:id="@+id/modifyButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/login_edittext_distance"
        android:onClick="Modify"
        android:text="@string/modify_profile"
        android:backgroundTint="@color/dark_green"
        app:layout_constraintTop_toBottomOf="@+id/PhoneNumberEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/login_edittext_distance"
        android:backgroundTint="@color/black"
        android:onClick="DeleteProfile"
        android:text="@string/delete_profile"
        app:layout_constraintTop_toBottomOf="@+id/modifyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.6"
        />

    <Button
        android:id="@+id/voiceButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/login_edittext_distance"
        android:backgroundTint="@color/blue"
        android:onClick="hangfelismer"
        android:text="@string/voice"
        app:layout_constraintTop_toBottomOf="@+id/deleteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.6"
        />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/red"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="65dp"
        android:layout_marginStart="20dp" />

    <FrameLayout
        android:id="@+id/BottomLine"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/dark_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>