<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@color/dark_green"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/UserNameEditText"
        android:layout_width="@dimen/long_edittext_width"
        android:layout_height="@dimen/edittext_height"
        android:layout_margin="@dimen/regist_margin"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/registrationTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/EmailEditText"
        android:layout_width="@dimen/long_edittext_width"
        android:layout_height="@dimen/edittext_height"
        android:layout_margin="@dimen/regist_margin"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/UserNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/PhoneNumberEditText"
        android:layout_width="@dimen/long_edittext_width"
        android:layout_height="@dimen/edittext_height"
        android:layout_margin="@dimen/regist_margin"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/EmailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/PasswordEditText"
        android:layout_width="@dimen/long_edittext_width"
        android:layout_height="@dimen/edittext_height"
        android:layout_margin="@dimen/regist_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/PhoneNumberEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/PasswordAgainEditText"
        android:layout_width="@dimen/long_edittext_width"
        android:layout_height="@dimen/edittext_height"
        android:layout_margin="@dimen/regist_margin"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/PasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/RegistButton"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/regist_margin"
        android:text="@string/register"
        android:onClick="registration"
        android:backgroundTint="@color/dark_green"
        app:layout_constraintTop_toBottomOf="@id/PasswordAgainEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/CancelButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="65dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/red"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/BottomLine"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/dark_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>