<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".HomePageActivity">

    <TextView
        android:id="@+id/BilliardClubNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/billiard_club_name"
        android:textAlignment="center"
        android:background="@color/dark_green"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:typeface="sans"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/BilliardClubNameEditText">

        <Button
            android:id="@+id/MyreservationsButton"
            android:layout_width="126dp"
            android:layout_height="50dp"
            android:layout_marginEnd="6dp"
            android:onClick="check_reservations"
            android:text="@string/reservations"
            android:backgroundTint="@color/dark_green" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="105dp"
            android:layout_height="50dp"
            android:layout_marginEnd="6dp"

            android:onClick="profile"
            android:text="@string/profile_text"
            android:backgroundTint="@color/dark_green" />

        <Button
            android:id="@+id/LogoutButton"
            android:layout_width="135dp"
            android:layout_height="50dp"

            android:onClick="logout"
            android:text="@string/logout"
            android:backgroundTint="@color/red" />
    </LinearLayout>

    <TextView
        android:id="@+id/WelcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_text"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:singleLine="true"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/reserveButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="60dp"
        android:layout_marginBottom="95dp"
        android:backgroundTint="@color/dark_green"
        android:onClick="make_reservation_homepage"
        android:text="@string/reservation"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/BottomLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/BilliardClubNameEditText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="@drawable/image_border"
    android:padding="5dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.491"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/reserveButton"
    app:srcCompat="@drawable/homepage_pic" />

    <FrameLayout
        android:id="@+id/BottomLine"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/dark_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">
    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>