<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".ReservationMakeActivity">

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reservation"
        android:background="@color/dark_green"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/UserNameTextview"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:text="@string/table_number_main"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/registrationTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/medium_green"
        android:textColor="@android:color/black"
        />

    <CalendarView
        android:id="@+id/DatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/UserNameTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/dateSelectionLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/DatePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_time_text"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_marginEnd="8dp"/>

        <Spinner
            android:id="@+id/dateSpinner"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/medium_green"
            android:background="@color/dark_green"
            android:spinnerMode="dropdown"/>
    </LinearLayout>


    <Button
        android:id="@+id/reservationButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/login_edittext_distance"
        android:onClick="make_reservation"
        android:text="@string/reservation_text"
        android:backgroundTint="@color/dark_green"
        app:layout_constraintTop_toBottomOf="@+id/dateSelectionLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/red"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toTopOf="@+id/BottomLine"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="20dp" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/red"
        android:onClick="toHome"
        android:text="@string/homapage"
        app:layout_constraintBottom_toTopOf="@+id/BottomLine"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="20dp" />

    <FrameLayout
        android:id="@+id/BottomLine"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/dark_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">
    </FrameLayout>




</androidx.constraintlayout.widget.ConstraintLayout>